fixed table in course page on firefox

--- a/app/assets/stylesheets/courses.displace.css.scss
+++ b/app/assets/stylesheets/courses.displace.css.scss
@@ -136,6 +136,8 @@ float: right;
 {
 font-family: 'Arial', 'Tahoma', sans-serif;
 font-size:14pt;
+float: left;
+
 }
 
 .section_tabs
